# Data-Science-Capstone

./: .gitignore  LICENSE.txt  README.md  composite_score_calc.ipynb  pyproject.toml
artifacts/GlobalTilt/: delta_GlobalTilt_model.joblib
artifacts/L1PA/: delta_L1PA_model.joblib
artifacts/L4S1/: delta_L4S1_model.joblib
artifacts/LL/: delta_LL_model.joblib
artifacts/MechanicalFailure/: mech_fail_logreg.joblib  mech_fail_xgb.joblib
artifacts/ODI/: delta_ODI_model.joblib
artifacts/SS/: delta_SS_model.joblib
artifacts/SVA/: delta_SVA_model.joblib
artifacts/T4PA/: delta_T4PA_model.joblib
notebooks/: 00_composite_score_calc.ipynb  00_data_cleaning.ipynb  01_composite_score_calc.ipynb  01_mech_fail_baseline.ipynb  01_mech_failure_model.ipynb  02_delta_models.ipynb  02_mech_fail_baseline.ipynb  02_optimization.ipynb  03_ml_model_baseline.ipynb  03_optimization.ipynb  03_optimization_holdout_patients.ipynb  04_delta_models.ipynb  04_delta_models_SVA_SS_GT.ipynb  04_optimization_new_patient.ipynb  04_parteto_front.ipynb  05_delta_models_SVA_SS_GT.ipynb  05_optimization copy ODI.ipynb  05_optimization.ipynb
notebooks/archive/: 03_ml_model_baseline.ipynb
src/: config.py  data_cleaning.py  display.py  optimization_utils.py  problem.py  runs.py  scoring.py  solutions.py
