[tool.poetry]
name = "capstone"
version = "0.1.0"
description = "MSDS Capstone"
authors = ["Vanja Glisic <vanjag@uw.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0"
numpy = "^1.24"
scikit-learn = "^1.3"
matplotlib = "^3.7"
seaborn = "^0.13"
jupyter = "^1.0"
openpyxl = "^3.0"
pymoo = "^0.6.0"
xgboost = ">=2.0,<3.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
